@@ -122,40 +122,12 @@
                 <param name="visible" value="Control.IsEnabled(7)" />
             </include>
             <include content="Object_Info_Button">
-                <param name="id" value="10" />
-                <param name="groupid" value="8010" />
-                <param name="label" value="Thumb" />
-                <param name="icon" value="special://skin/extras/icons/paintbrush.png" />
-                <param name="visible" value="Control.IsEnabled(10)" />
-            </include>
-            <include content="Object_Info_Button">
                 <param name="id" value="8101" />
                 <param name="groupid" value="8001" />
-                <param name="label" value="Artwork" />
-                <param name="icon" value="special://skin/extras/icons/paintbrush2.png" />
-                <param name="visible" value="[String.IsEqual(ListItem.DBType,tvshow) | String.IsEqual(ListItem.DBType,movie) | String.IsEqual(ListItem.DBType,musicvideo) | String.IsEqual(ListItem.DBType,episode)] + system.hasaddon(script.artwork.beef)" />
-                <onclick condition="String.IsEqual(ListItem.DBType,episode)">XBMC.RunScript(script.artwork.beef, mode=gui, mediatype=episode, dbid=$INFO[ListItem.DBID])</onclick>
-                <onclick condition="String.IsEqual(ListItem.DBType,tvshow)">XBMC.RunScript(script.artwork.beef, mode=gui, mediatype=tvshow, dbid=$INFO[ListItem.DBID])</onclick>
-                <onclick condition="String.IsEqual(ListItem.DBType,movie)">XBMC.RunScript(script.artwork.beef, mode=gui, mediatype=movie, dbid=$INFO[ListItem.DBID])</onclick>
-            </include>
-            <include content="Object_Info_Button">
-                <param name="id" value="8102" />
-                <param name="groupid" value="8002" />
-                <param name="label" value="All Art" />
-                <param name="visible" value="[String.IsEqual(ListItem.DBType,tvshow) | String.IsEqual(ListItem.DBType,movie) | String.IsEqual(ListItem.DBType,musicvideo) | String.IsEqual(ListItem.DBType,episode)] + system.hasaddon(script.artwork.beef)" />
-                <param name="icon" value="special://skin/extras/icons/paintbucket3.png" />
-                <onclick condition="String.IsEqual(ListItem.DBType,episode)">XBMC.RunScript(script.artwork.beef, mode=auto, mediatype=tvshow, dbid=$INFO[ListItem.DBID])</onclick>
-                <onclick condition="String.IsEqual(ListItem.DBType,tvshow)">XBMC.RunScript(script.artwork.beef, mode=auto, mediatype=tvshow, dbid=$INFO[ListItem.DBID])</onclick>
-                <onclick condition="String.IsEqual(ListItem.DBType,movie)">XBMC.RunScript(script.artwork.beef, mode=auto, mediatype=movie, dbid=$INFO[ListItem.DBID])</onclick>
-            </include>
-            <include content="Object_Info_Button">
-                <param name="id" value="6" />
-                <param name="groupid" value="8006" />
-                <param name="label" value="Refresh" />
-                <param name="icon" value="special://skin/extras/icons/update.png" />
+                <param name="label" value="Manage" />
+                <param name="icon" value="special://skin/extras/icons/settings.png" />
                 <param name="visible" value="Control.IsEnabled(6)" />
-                <onfocus>SetProperty(FilePath,1,Home)</onfocus>
-                <onunfocus>ClearProperty(FilePath,Home)</onunfocus>
+                <onclick>SetFocus(8111)</onclick>
             </include>
         </control>
     </include>
@@ -808,7 +780,7 @@
 
             <!-- Languages -->
             <control type="group">
-                <visible>!Control.HasFocus(6)</visible>
+                <visible>!Control.HasFocus(8101)</visible>
                 <include content="Object_Languages">
                     <param name="infohide" value="false" />
                 </include>
@@ -816,7 +788,7 @@
 
             <!-- File Path -->
             <include content="Object_Icon_Details">
-                <param name="visible" value="Control.HasFocus(6)" />
+                <param name="visible" value="Control.HasFocus(8101)" />
                 <param name="icon" value="buttons/disk.png" />
                 <param name="haspath" value="true" />
                 <param name="label" value="$INFO[ListItem.FileNameAndPath]" />
