@@ -2,6 +2,36 @@
 <includes>
     <include name="Items_PowerMenu"><content><include>skinshortcuts-group-powermenu</include></content></include>
 
+    <include name="Items_Info_Manage">
+        <content>
+            <item>
+                <label>$LOCALIZE[31193]</label>
+                <visible>Control.IsEnabled(10)</visible>
+                <onclick>SendClick(10)</onclick>
+            </item>
+            <item>
+                <label>$LOCALIZE[31195]</label>
+                <visible>[String.IsEqual(ListItem.DBType,tvshow) | String.IsEqual(ListItem.DBType,movie) | String.IsEqual(ListItem.DBType,musicvideo) | String.IsEqual(ListItem.DBType,episode)] + system.hasaddon(script.artwork.beef)</visible>
+                <onclick condition="String.IsEqual(ListItem.DBType,episode)">XBMC.RunScript(script.artwork.beef, mode=gui, mediatype=episode, dbid=$INFO[ListItem.DBID])</onclick>
+                <onclick condition="String.IsEqual(ListItem.DBType,tvshow)">XBMC.RunScript(script.artwork.beef, mode=gui, mediatype=tvshow, dbid=$INFO[ListItem.DBID])</onclick>
+                <onclick condition="String.IsEqual(ListItem.DBType,movie)">XBMC.RunScript(script.artwork.beef, mode=gui, mediatype=movie, dbid=$INFO[ListItem.DBID])</onclick>
+            </item>
+            <item>
+                <label>$LOCALIZE[31197]</label>
+                <visible>[String.IsEqual(ListItem.DBType,tvshow) | String.IsEqual(ListItem.DBType,movie) | String.IsEqual(ListItem.DBType,musicvideo) | String.IsEqual(ListItem.DBType,episode)] + system.hasaddon(script.artwork.beef)</visible>
+                <onclick>Back</onclick>
+                <onclick condition="String.IsEqual(ListItem.DBType,episode)">XBMC.RunScript(script.artwork.beef, mode=auto, mediatype=tvshow, dbid=$INFO[ListItem.DBID])</onclick>
+                <onclick condition="String.IsEqual(ListItem.DBType,tvshow)">XBMC.RunScript(script.artwork.beef, mode=auto, mediatype=tvshow, dbid=$INFO[ListItem.DBID])</onclick>
+                <onclick condition="String.IsEqual(ListItem.DBType,movie)">XBMC.RunScript(script.artwork.beef, mode=auto, mediatype=movie, dbid=$INFO[ListItem.DBID])</onclick>
+            </item>
+            <item>
+                <label>$LOCALIZE[31204]</label>
+                <visible>Control.IsEnabled(6)</visible>
+                <onclick>SendClick(6)</onclick>
+            </item>
+        </content>
+    </include>
+
     <include name="Items_Info_Gallery">
         <content>
             <item>
