@@ -1182,7 +1182,7 @@
                         <onleft>ClearProperty(OSD_Menu,Home)</onleft>
                         <onright>ClearProperty(OSD_Menu,Home)</onright>
                         <onback>ClearProperty(OSD_Menu,Home)</onback>
-                        <onfocus>SetProperty(OSD_Menu,3112,Home)</onfocus>
+                        <onfocus>SetProperty(OSD_Menu,$PARAM[id],Home)</onfocus>
                         <onleft>$PARAM[osd_id]</onleft>
                         <onright>$PARAM[osd_id]</onright>
                         <onback>$PARAM[osd_id]</onback>
