@@ -2348,7 +2348,7 @@
                 <top>-35</top>
                 <include>Animation_FadeIn_Delay</include>
                 <include>Animation_FadeOut</include>
-                <visible>!Control.HasFocus(6)</visible>
+                <visible>!Control.HasFocus(8101)</visible>
                 <visible>!Control.HasFocus($PARAM[artworkid])</visible>
                 <visible>Container($PARAM[id]).HasPrevious</visible>
                 <include content="Object_DoubleArrow_Up">
@@ -2359,7 +2359,7 @@
                 <bottom>45</bottom>
                 <include>Animation_FadeIn_Delay</include>
                 <include>Animation_FadeOut</include>
-                <visible>!Control.HasFocus(6)</visible>
+                <visible>!Control.HasFocus(8101)</visible>
                 <visible>!ControlGroup(300).HasFocus() | !Skin.HasSetting(EnableLanguages)</visible>
                 <visible>!Control.HasFocus($PARAM[artworkid])</visible>
                 <visible>Container($PARAM[id]).HasNext</visible>
