@@ -2,6 +2,7 @@
 - Re-add extended info button in osd
 - Fix for single PVR info in multiwidget layout
 - Option for numeric star rating
+- Manage art/info menu in dialogvideoinfo
 
 0.9.37
 - Add fake landscape icon to Icon Wall view for square icons
